--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -94,7 +94,16 @@
     </div>
 
     <div class="stats-panel__slider">
-      <!-- 이 안은 1번에서 다시 설명 -->
+     <button class="stats-panel__nav stats-panel__nav--prev" type="button">‹</button>
+
+  <div class="stats-panel__viewport">
+    <!-- JS가 이 안에 .stats-card--product들을 렌더 -->
+    <div id="ontuProductSection" class="stats-panel__track">
+      <!-- <div class="stats-card stats-card--product"> … </div> ... -->
+    </div>
+  </div>
+
+  <button class="stats-panel__nav stats-panel__nav--next" type="button">›</button>
     </div>
   </div>
 </section>
