--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -54,22 +54,20 @@
     <div class="beta-inner">
 
       <!-- 상단: 페이지 타이틀 + 기준월 선택 -->
-      <section class="beta-section beta-section--filter">
-        <div class="beta-stats-header">
-          <div class="beta-stats-header__left">
-            <h1 class="beta-stats-title">대출 통계</h1>
-            <p class="beta-stats-subtitle">
-              전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
-            </p>
-          </div>
-          <div class="beta-stats-header__right">
-            <label class="beta-month-picker">
-              <span class="beta-month-picker__label">기준월</span>
-              <input type="month" id="statsMonthPicker" />
-            </label>
-          </div>
-        </div>
-      </section>
+<section class="beta-section beta-section--filter">
+  <div class="beta-stats-header">
+    <div class="beta-stats-header__top-row">
+      <h1 class="beta-stats-title">대출 통계</h1>
+      <label class="beta-month-picker">
+        <!-- '기준월' 텍스트 완전 제거, 인풋만 유지 -->
+        <input type="month" id="statsMonthPicker" />
+      </label>
+    </div>
+    <p class="beta-stats-subtitle">
+      전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
+    </p>
+  </div>
+</section>
 
 <!-- 대출현황 섹션 -->
 <section class="beta-section">
