--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -85,7 +85,7 @@
 
       <!-- 뷰포트 + 트랙 -->
       <div class="stats-panel__viewport">
-        <div class="stats-panel__track stats-panel__track--loan" id="loanStatsTrack">
+        <div class="stats-panel__track stats-panel__track--loan" id="ontuLoanStatus">
           <!-- 기존 loan 카드 4개(.stats-card) 를 전부 이 안으로 옮겨 넣기 -->
           <!-- 예시:
           <article class="stats-card stats-card--loan">...</article>
@@ -98,14 +98,7 @@
       </button>
     </div>
 
-    <!-- PC에서만 보이는 슬라이더 진행 막대 (모바일은 그냥 있어도 크게 부담 X) -->
-    <div class="stats-panel__progress stats-panel__progress--loan">
-      <div class="stats-panel__progress-bar">
-        <div class="stats-panel__progress-thumb" id="loanSliderThumb"></div>
-      </div>
-    </div>
-  </div>
-</section>
+ </section>
 
 
 <!-- 상품유형별 대출잔액 섹션 -->
