--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -8,11 +8,11 @@
   <!-- 검색엔진 인덱싱 방지(베타) -->
   <meta name="robots" content="noindex, nofollow" />
 
-  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
-  <!-- 도넛 차트용 Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- 이 페이지 전용 CSS (공용 styles.css는 건들지 않기) -->
+  <link rel="stylesheet" href="/assets/ontu-stats.css?v=20251202" />
+
   <!-- 이 페이지 전용 JS -->
-  <script type="module" src="/assets/ontu-stats.js?v=20251127"></script>
+  <script type="module" src="/assets/ontu-stats.js?v=20251202"></script>
 </head>
 <body class="beta-body ontu-stats-page">
 
@@ -54,78 +54,74 @@
     <div class="beta-inner">
 
       <!-- 상단: 페이지 타이틀 + 기준월 선택 -->
-<section class="beta-section beta-section--filter">
-  <div class="beta-stats-header">
-    <div class="beta-stats-header__top-row">
-      <h1 class="beta-stats-title">대출 통계</h1>
-      <label class="beta-month-picker">
-        <!-- '기준월' 텍스트 완전 제거, 인풋만 유지 -->
-        <input type="month" id="statsMonthPicker" />
-      </label>
-    </div>
-    <p class="beta-stats-subtitle">
-      전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
-    </p>
-  </div>
-</section>
+      <section class="beta-section beta-section--filter">
+        <div class="beta-stats-header">
+          <div class="beta-stats-header__left">
+            <h1 class="beta-stats-title">대출 통계</h1>
+            <p class="beta-stats-subtitle">
+              전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
+            </p>
+          </div>
+          <label class="beta-month-picker">
+            <!-- '기준월' 텍스트는 CSS에서 숨김 -->
+            <span class="beta-month-picker__label">기준월</span>
+            <input type="month" id="statsMonthPicker" />
+          </label>
+        </div>
+      </section>
 
-<!-- 대출현황 섹션 -->
-<section class="beta-section">
-  <div class="stats-panel stats-panel--loan">
-    <div class="stats-panel__header">
-      <h2 class="stats-panel__title">대출 현황</h2>
-    </div>
+      <!-- 대출현황 섹션 (PC: 4장 그리드 / 모바일: 1장씩 세로) -->
+      <section class="beta-section">
+        <div class="stats-panel stats-panel--loan">
+          <div class="stats-panel__header">
+            <h2 class="stats-panel__title">대출 현황</h2>
+            <div id="loanStatusMonth" class="stats-panel__meta"></div>
+          </div>
 
-    <!-- 슬라이더 레이아웃 -->
-   <div class="stats-panel__slider">
-    <button
-      class="stats-panel__nav stats-panel__nav--prev"
-      id="productSliderPrev"
-      type="button">‹</button>
-  
-    <div class="stats-panel__viewport">
-      <div id="ontuProductSection" class="stats-panel__track">
-        ...
-      </div>
-    </div>
-  
-    <button
-      class="stats-panel__nav stats-panel__nav--next"
-      id="productSliderNext"
-      type="button">›</button>
-  </div>
-      </div>
+          <!-- 대출현황은 PC에서 슬라이더 사용 안 함(모바일에서도 그냥 세로 카드) -->
+          <div class="stats-panel__body">
+            <div id="ontuLoanStatus" class="stats-panel__grid stats-panel__grid--loan">
+              <!-- JS 렌더링 -->
+            </div>
+          </div>
+        </div>
+      </section>
 
-      <button class="stats-panel__nav stats-panel__nav--next" id="loanSliderNext">
-        ›
-      </button>
-    </div>
+      <!-- 상품유형별 대출잔액 섹션 (모바일만 슬라이더) -->
+      <section class="beta-section">
+        <div class="stats-panel stats-panel--products">
+          <div class="stats-panel__header">
+            <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
+            <div id="productStatusMonth" class="stats-panel__meta"></div>
+          </div>
 
- </section>
+          <div class="stats-panel__slider stats-panel__slider--products">
+            <!-- 좌/우 버튼 (모바일에서만 보이게 CSS 처리) -->
+            <button
+              class="stats-panel__nav stats-panel__nav--prev"
+              id="productSliderPrev"
+              type="button"
+              aria-label="이전">
+              ‹
+            </button>
 
+            <div class="stats-panel__viewport">
+              <div id="ontuProductSection"
+                   class="stats-panel__track stats-panel__track--products">
+                <!-- 상품유형 카드들이 JS로 렌더 -->
+              </div>
+            </div>
 
-<!-- 상품유형별 대출잔액 섹션 -->
-<section class="beta-section">
-  <div class="stats-panel stats-panel--products">
-    <div class="stats-panel__header">
-      <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-      <div id="productStatusMonth" class="stats-panel__meta"></div>
-    </div>
-
-    <div class="stats-panel__slider">
-     <button class="stats-panel__nav stats-panel__nav--prev" type="button">‹</button>
-
-  <div class="stats-panel__viewport">
-    <!-- JS가 이 안에 .stats-card--product들을 렌더 -->
-    <div id="ontuProductSection" class="stats-panel__track">
-      <!-- <div class="stats-card stats-card--product"> … </div> ... -->
-    </div>
-  </div>
-
-  <button class="stats-panel__nav stats-panel__nav--next" type="button">›</button>
-    </div>
-  </div>
-</section>
+            <button
+              class="stats-panel__nav stats-panel__nav--next"
+              id="productSliderNext"
+              type="button"
+              aria-label="다음">
+              ›
+            </button>
+          </div>
+        </div>
+      </section>
 
     </div>
   </main>
