--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -16,27 +16,26 @@
 </head>
 <body class="beta-body ontu-stats-page">
 
-  <!-- 상단 헤더: 로고 + MENU -->
+ <!-- 상단 헤더: 로고 + MENU 버튼 -->
   <header class="huchu-header beta-header" role="banner">
-    <div class="huchu-header__inner beta-header__inner">
-      <a href="/beta/" class="huchu-logo" aria-label="후추 Huchu 홈">
-        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
-        <span class="logo-fallback">
-          <span class="logo-mark">%</span>
-          <span class="logo-text">후추 Huchu</span>
-        </span>
-      </a>
+  <div class="huchu-header__inner beta-header__inner">
+    <!-- 로고 -->
+    <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
+      <span class="logo-fallback">
+        <span class="logo-mark">%</span>
+        <span class="logo-text">후추 Huchu</span>
+      </span>
+    </a>
 
-      <!-- MENU 버튼 -->
-      <button
-        id="betaMenuToggle"
+    <!-- MENU -->
+<button id="betaMenuToggle"
         class="beta-menu-toggle"
         type="button"
         aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <span class="beta-menu-toggle__label">MENU</span>
-      </button>
+        aria-expanded="false">
+  <span class="beta-menu-toggle__label">MENU</span>
+</button>
 
       <!-- 드롭다운 패널 -->
       <div id="betaMenuPanel" class="beta-menu-panel hide">
@@ -73,47 +72,77 @@
     전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
   </p>
 
-  <!-- 섹션 1 : 대출 현황 -->
-  <section class="ontu-section">
-    <div class="ontu-section-inner">
-      <h2 class="ontu-section-title">대출 현황</h2>
+  <section class="stats-panel stats-panel--loan">
+  <header class="stats-panel__header">
+    <h2 class="stats-panel__title">
+      대출 현황
+      <span id="loanStatusMonth" class="stats-panel__month"></span>
+    </h2>
+  </header>
 
-      <div class="ontu-slider" data-section="loan">
-        <button class="ontu-slider-arrow ontu-slider-arrow--prev" type="button" aria-label="이전 카드">
-          ‹
-        </button>
+  <div class="stats-panel__body">
+    <button
+      type="button"
+      class="stats-panel__nav stats-panel__nav--prev"
+      data-card-prev="loan"
+    >
+      <span class="sr-only">이전</span>
+    </button>
 
-        <div id="loan-status-cards" class="ontu-card-track">
-          <!-- JS가 카드 생성해서 넣음 -->
-        </div>
-
-        <button class="ontu-slider-arrow ontu-slider-arrow--next" type="button" aria-label="다음 카드">
-          ›
-        </button>
-      </div>
+    <div class="stats-panel__viewport">
+      <!-- 이 안에 JS가 카드들을 채워 넣음 -->
+      <div
+        id="ontuLoanStatus"
+        class="stats-panel__track"
+        data-card-track="loan"
+      ></div>
     </div>
-  </section>
 
-  <!-- 섹션 2 : 상품유형별 대출잔액 -->
-  <section class="ontu-section">
-    <div class="ontu-section-inner">
-      <h2 class="ontu-section-title">상품유형별 대출잔액</h2>
+    <button
+      type="button"
+      class="stats-panel__nav stats-panel__nav--next"
+      data-card-next="loan"
+    >
+      <span class="sr-only">다음</span>
+    </button>
+  </div>
+</section>
 
-      <div class="ontu-slider" data-section="product">
-        <button class="ontu-slider-arrow ontu-slider-arrow--prev" type="button" aria-label="이전 카드">
-          ‹
-        </button>
+<section class="stats-panel stats-panel--products">
+  <header class="stats-panel__header">
+    <h2 class="stats-panel__title">
+      상품유형별 대출잔액
+      <span id="productStatusMonth" class="stats-panel__month"></span>
+    </h2>
+  </header>
 
-        <div id="product-balance-cards" class="ontu-card-track">
-          <!-- JS가 카드 생성해서 넣음 -->
-        </div>
+  <div class="stats-panel__body">
+    <button
+      type="button"
+      class="stats-panel__nav stats-panel__nav--prev"
+      data-card-prev="product"
+    >
+      <span class="sr-only">이전</span>
+    </button>
 
-        <button class="ontu-slider-arrow ontu-slider-arrow--next" type="button" aria-label="다음 카드">
-          ›
-        </button>
-      </div>
+    <div class="stats-panel__viewport">
+      <!-- 여기에도 JS가 카드들 렌더 -->
+      <div
+        id="ontuProductSection"
+        class="stats-panel__track"
+        data-card-track="product"
+      ></div>
     </div>
-  </section>
+
+    <button
+      type="button"
+      class="stats-panel__nav stats-panel__nav--next"
+      data-card-next="product"
+    >
+      <span class="sr-only">다음</span>
+    </button>
+  </div>
+</section>
 </main>
 
   <!-- 푸터 -->
@@ -124,14 +153,12 @@
       <a href="/privacy.html">개인정보 취급방침</a>
     </div>
     <div class="beta-footer__bottom">
-      <div class="beta-footer__brand">
-        <img
-          src="/assets/logo/huchu-logo-white.png"
-          alt="HUCHU 로고"
-          class="beta-footer__logo-img"
-        />
-        <span class="beta-footer__logo-text">HUCHU</span>
-      </div>
+     <div class="beta-footer__brand">
+  <img src="/assets/logo/huchu-logo-white.png"
+       alt="HUCHU 로고"
+       class="beta-footer__logo-img" />
+  <span class="beta-footer__logo-text">HUCHU</span>
+</div>
       <div class="beta-footer__info">
         <p>상호: (예시) 후추랩 | 대표: 장현성</p>
         <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
