--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -59,12 +59,9 @@
       <label class="ontu-period-label" for="ontu-period-select">
         <!-- 필요하면 '기준월' 텍스트 추가 -->
       </label>
-      <select id="ontu-period-select" class="ontu-period-select">
-        <!-- JS에서 옵션 채워 넣을 예정 / 일단 하드코딩 예시 -->
-        <option value="2025-10">2025년 10월</option>
-        <option value="2025-09">2025년 9월</option>
-        <option value="2025-08">2025년 8월</option>
-      </select>
+    <select id="ontuMonthSelect" class="stats-month-select">
+  <!-- 옵션은 JS가 채워 넣음 -->
+</select>
     </div>
   </header>
 
