--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -2,39 +2,39 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>대출 통계 | 온투업 담보대출 통계 상세</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>대출 통계 | 온투업 P2P 담보대출 통계 상세</title>
+  <meta name="description" content="온라인투자연계금융업(P2P) 담보대출의 누적 대출금액, 상환금액, 대출잔액과 상품유형별 대출잔액을 월별로 확인할 수 있는 대출 통계 페이지입니다.">
   <meta name="robots" content="noindex, nofollow" />
-
-  <!-- 공통 스타일 -->
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="/assets/styles.css?v=20251203-ontu-stats" />
 </head>
 <body class="beta-body ontu-stats-page">
-
-  <!-- 공통 헤더 (다른 β페이지와 동일 패턴) -->
+  <!-- 공통 헤더 -->
   <header class="huchu-header beta-header">
-    <div class="beta-header__inner">
+    <div class="beta-header__inner huchu-header__inner">
       <a href="/" class="huchu-logo">
-        <img src="/assets/logo/huchu-logo.png" alt="후추" class="logo-img" />
+        <img src="/assets/logo/huchu-logo.png" alt="후추 로고" class="logo-img" />
+        <span class="logo-text">HUCHU</span>
       </a>
-
       <div class="beta-menu">
-        <button type="button" class="beta-menu-toggle" id="betaMenuToggle">
+        <button type="button" class="beta-menu-toggle" aria-label="메뉴 열기">
+          <span class="beta-menu-toggle__icon">
+            <span></span><span></span><span></span>
+          </span>
           <span class="beta-menu-toggle__label">MENU</span>
         </button>
         <div class="beta-menu-panel hide" id="betaMenuPanel">
           <a href="/" class="beta-menu-link">홈</a>
-          <a href="/calculator.html" class="beta-menu-link">대출 계산기</a>
-          <a href="/products/index.html" class="beta-menu-link">대출상품</a>
-          <a href="/beta/ontu-stats.html" class="beta-menu-link">온투업 통계</a>
+          <a href="/calculator.html" class="beta-menu-link">담보대출 한도 계산기</a>
+          <a href="/products/index.html" class="beta-menu-link">담보대출 상품 안내</a>
+          <a href="/blog.html" class="beta-menu-link">블로그</a>
         </div>
       </div>
     </div>
   </header>
 
   <main class="beta-inner">
-
-    <!-- 상단 타이틀 + 월 선택 -->
+    <!-- 상단 타이틀 + 기준월 선택 -->
     <section class="beta-section beta-section--filter">
       <div class="beta-stats-header">
         <div class="beta-stats-header__left">
@@ -43,11 +43,15 @@
             전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
           </p>
         </div>
-
         <div class="beta-stats-header__right">
           <div class="beta-month-picker">
             <span class="beta-month-picker__label">기준월</span>
-            <input type="month" id="ontuMonthPicker" />
+            <input
+              type="month"
+              id="ontuMonthInput"
+              name="ontuMonthInput"
+              aria-label="기준월 선택"
+            />
           </div>
         </div>
       </div>
@@ -58,29 +62,16 @@
       <div class="stats-panel stats-panel--loan">
         <div class="stats-panel__header">
           <h2 class="stats-panel__title">대출 현황</h2>
-          <div class="stats-panel__meta" id="loanStatusMonthLabel"></div>
+          <p class="stats-panel__meta" data-ontu-month-text="loan"></p>
         </div>
 
-        <!-- 데스크탑: 슬라이더 (PC 4장 / 모바일 1장) -->
-        <div class="stats-panel__slider stats-panel__slider--loan">
-          <button type="button"
-                  class="stats-panel__nav stats-panel__nav--prev"
-                  id="loanSliderPrev">
-            ‹
-          </button>
-
+        <div class="stats-panel__body stats-panel__slider stats-panel__slider--loan">
           <div class="stats-panel__viewport">
-            <div class="stats-panel__track stats-panel__track--loan"
-                 id="ontuLoanStatus">
-              <!-- JS에서 카드 렌더링 -->
+            <div class="stats-panel__track stats-panel__track--loan" id="ontuLoanTrack">
+              <!-- JS에서 카드 삽입 -->
             </div>
           </div>
-
-          <button type="button"
-                  class="stats-panel__nav stats-panel__nav--next"
-                  id="loanSliderNext">
-            ›
-          </button>
+          <!-- 하단 인디케이터/버튼은 CSS로 숨김 (슬라이드 기능만 유지, 자동 슬라이드 JS로 처리) -->
         </div>
       </div>
     </section>
@@ -90,60 +81,41 @@
       <div class="stats-panel stats-panel--products">
         <div class="stats-panel__header">
           <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-          <div class="stats-panel__meta" id="productStatusMonthLabel"></div>
+          <p class="stats-panel__meta" data-ontu-month-text="products"></p>
         </div>
 
-        <!-- 상품유형 카드 슬라이더 -->
-        <div class="stats-panel__slider stats-panel__slider--products">
-          <button type="button"
-                  class="stats-panel__nav stats-panel__nav--prev"
-                  id="productSliderPrev">
-            ‹
-          </button>
-
+        <div class="stats-panel__body stats-panel__slider stats-panel__slider--products">
           <div class="stats-panel__viewport">
-            <div class="stats-panel__track stats-panel__track--products"
-                 id="ontuProductTrack">
-              <!-- JS에서 상품유형 카드 렌더링 -->
+            <div class="stats-panel__track stats-panel__track--products" id="ontuProductTrack">
+              <!-- JS에서 카드 삽입 -->
             </div>
           </div>
-
-          <button type="button"
-                  class="stats-panel__nav stats-panel__nav--next"
-                  id="productSliderNext">
-            ›
-          </button>
         </div>
       </div>
     </section>
-
-    <!-- 에러/안내 메시지 영역 -->
-    <section class="beta-section" id="ontuStatsNoticeSection" style="display:none;">
-      <div class="notice error" id="ontuStatsNotice"></div>
-    </section>
-
   </main>
 
-  <!-- 공통 푸터 (다른 β페이지와 동일 패턴) -->
+  <!-- 공통 푸터 (다른 페이지와 동일 구조) -->
   <footer class="beta-footer">
     <div class="beta-footer__top">
-      <div><a href="/products/index.html">온투업 담보대출 상품 안내</a></div>
-      <div><a href="/calculator.html">담보대출 한도 계산기</a></div>
-      <div><a href="https://blog.naver.com" target="_blank" rel="noopener">블로그</a></div>
+      <a href="/about.html">회사소개</a>
+      <a href="/terms.html">서비스이용약관</a>
+      <a href="/privacy.html">개인정보 취급방침</a>
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
         <span class="beta-footer__logo-mark">후</span>
-        <span class="beta-footer__logo-text">HUCHU LAB</span>
+        <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-        <p>ⓒ Huchu Lab. All rights reserved.</p>
+        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
+        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
+        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
 
-  <!-- 공통 스크립트 + 온투 통계 전용 스크립트 -->
-  <script type="module" src="/assets/shared.js"></script>
-  <script type="module" src="/assets/ontu-stats.js"></script>
+  <script src="/assets/ontu-stats.js?v=20251203-auto"></script>
 </body>
 </html>
