--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -33,12 +33,12 @@
 </button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
-          <a class="beta-menu-link" href="/beta/">온투업 대출 통계</a>
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출 통계</a>
           <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">광고문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
+          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
         </div>
       </div>
     </div>
