--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="noindex, nofollow" />
   <link rel="stylesheet" href="/assets/styles.css?v=20251203-ontu-stats" />
 </head>
-<body class="beta-body">
+<body class="beta-body ontu-stats-page">
 
   <!-- 상단 헤더: 베타와 동일 구조 -->
   <header class="huchu-header beta-header" role="banner">
