--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -1,5 +1,168 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <style>
+    /* === 온투 통계 페이지 전용 강제 오버라이드 === */
+
+    /* 1. 타이틀/부제목은 좌측 정렬, 캘린더는 타이틀 오른쪽 밀착 */
+    body.ontu-stats-page .beta-stats-header {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 6px;
+    }
+
+    body.ontu-stats-page .beta-stats-header__top-row {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    body.ontu-stats-page .beta-stats-title,
+    body.ontu-stats-page .beta-stats-subtitle {
+      text-align: left;
+    }
+
+    body.ontu-stats-page .beta-month-picker {
+      display: inline-flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 6px;
+    }
+
+    body.ontu-stats-page .beta-month-picker__label {
+      display: none !important;
+    }
+
+    /* 모바일에서 두 줄 깨지지 않게 */
+    @media (max-width: 640px) {
+      body.ontu-stats-page .beta-stats-header {
+        align-items: flex-start;
+      }
+      body.ontu-stats-page .beta-stats-header__top-row {
+        width: 100%;
+        justify-content: space-between;
+      }
+      body.ontu-stats-page .beta-month-picker input[type="month"] {
+        max-width: 150px;
+      }
+    }
+
+    /* 2. 대출현황/상품유형 카드 하단 회색 막대 완전 제거 */
+    body.ontu-stats-page .stats-panel__slider::after,
+    body.ontu-stats-page .stats-panel__rail,
+    body.ontu-stats-page .stats-panel__nav {
+      display: none !important;
+      content: none !important;
+    }
+
+    /* 3. 패널 제목(대출 현황 / 상품유형별 대출잔액) 30% 업 */
+    body.ontu-stats-page .stats-panel__title {
+      font-size: 24px !important;
+      font-weight: 800;
+    }
+
+    /* 4. 카드 라벨/본문 30% 업 */
+    body.ontu-stats-page .stats-card__label {
+      font-size: 16px !important;
+      font-weight: 700;
+    }
+    body.ontu-stats-page .stats-card__share {
+      font-size: 12px !important;
+    }
+
+    /* 5. 금액/개수 메인 숫자 2배, 단위는 50% */
+    body.ontu-stats-page .stats-card__value--main {
+      display: inline-flex;
+      align-items: baseline;
+      justify-content: center;
+      gap: 4px;
+      white-space: nowrap; /* 숫자+단위 한 줄 유지 */
+    }
+
+    body.ontu-stats-page .stats-panel .money-number,
+    body.ontu-stats-page .stats-card__number {
+      font-size: clamp(30px, 3.4vw, 42px);
+      font-weight: 800;
+      line-height: 1.1;
+    }
+
+    body.ontu-stats-page .stats-panel .money-unit,
+    body.ontu-stats-page .stats-card__unit {
+      font-size: clamp(14px, 1.4vw, 18px);
+      font-weight: 600;
+      color: #6b7280;
+      margin-left: 4px;
+    }
+
+    @media (max-width: 640px) {
+      body.ontu-stats-page .stats-panel .money-number,
+      body.ontu-stats-page .stats-card__number {
+        font-size: 24px;
+      }
+      body.ontu-stats-page .stats-panel .money-unit,
+      body.ontu-stats-page .stats-card__unit {
+        font-size: 12px;
+      }
+    }
+
+    /* 6. 첫 번째 카드(데이터수집 온투업체수) 숫자/단위 3배 수준 */
+    body.ontu-stats-page .stats-panel--loan .stats-card:first-child .stats-card__number {
+      font-size: clamp(42px, 4vw, 56px);
+      font-weight: 800;
+    }
+    body.ontu-stats-page .stats-panel--loan .stats-card:first-child .stats-card__unit {
+      font-size: clamp(20px, 2vw, 24px);
+      font-weight: 700;
+    }
+
+    /* 7. 전월대비 블럭 텍스트 크기 조정 */
+    body.ontu-stats-page .stats-card__delta-label {
+      font-size: 14px;
+      font-weight: 700;
+    }
+    body.ontu-stats-page .stats-card__delta-rate {
+      font-size: 18px;
+      font-weight: 800;
+    }
+    body.ontu-stats-page .stats-card__delta {
+      font-size: 20px;
+    }
+
+    @media (max-width: 900px) {
+      body.ontu-stats-page .stats-card__delta-label {
+        font-size: 11px;
+      }
+      body.ontu-stats-page .stats-card__delta-rate {
+        font-size: 13px;
+      }
+      body.ontu-stats-page .stats-card__delta {
+        font-size: 14px;
+      }
+    }
+
+    /* 8. 상품유형별 카드 슬라이더 – 가로 스크롤만, 드래그시 커서 변경 */
+    body.ontu-stats-page .stats-panel__viewport {
+      overflow-x: auto;
+      overflow-y: hidden;
+      -webkit-overflow-scrolling: touch;
+      scroll-snap-type: x mandatory;
+    }
+    body.ontu-stats-page .stats-panel__viewport::-webkit-scrollbar {
+      display: none;
+    }
+    body.ontu-stats-page .stats-panel__track {
+      display: flex;
+      gap: 14px;
+    }
+    body.ontu-stats-page .stats-card {
+      scroll-snap-align: center;
+    }
+    body.ontu-stats-page .stats-panel__viewport.is-dragging {
+      cursor: grabbing;
+      cursor: -webkit-grabbing;
+    }
+  </style>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
